alignment issue resolved

--- a/styles.css
+++ b/styles.css
@@ -327,6 +327,9 @@ li{
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     padding: 1rem;
     margin-top: 3rem;
+    /* width: 100vw; */
+    /* max-width: 900px;
+    margin: 0 auto; */
 }
 
 /* .grid-item{
